syntax = "proto3";

package user;
option go_package = "./proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
    rpc GetUser (GetUserRequest) returns (UserResponse) {}
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    int32 age = 3;
}

message GetUserRequest {
    int64 id = 1;
}

message ListUsersRequest {}

message UserResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    int32 version = 5;
}

message ListUsersResponse {
    repeated UserResponse users = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message DeleteUserRequest {
  int64 id = 1;
}